feature: adds checkout page

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -162,6 +162,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="account-cart.html" style="color: #fff;">Личный кабинет - Мои товары</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="checkout.html" style="color: #fff;">Корзина</a>
+			</li>
 		</ul>
 	</div>
 </div>
