--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -85,7 +85,6 @@
     }
   }
 
-
   &--checkout {
     position: relative;
     padding: 15px 0 10px;
@@ -269,4 +268,81 @@
     }
   }
 
+  &--accessories {
+    padding: 15px;
+    background: #F8F8F8;
+    border: 1px solid #EAEAEA;
+    border-radius: 10px;
+
+    .product-card {
+
+      &__image {
+        display: flex;
+        align-items: center;
+        margin-right: 15px;
+        width: 110px;
+        text-align: center;
+        background: #FFFFFF;
+        mix-blend-mode: darken;
+
+        img {
+          width: 100%;
+          height: auto;
+        }
+      }
+
+      &__name {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 2;
+        max-height: 50px;
+        margin-bottom: 15px;
+        color: #30373D;
+
+        @include screen(xl) {
+          font: normal 14px/26px Roboto;
+        }
+
+        @include screen(l) {
+          font: normal 16px/22px Roboto;
+        }
+      }
+
+      &__price {
+        margin-bottom: 10px;
+
+        &-old {
+          margin-right: 5px;
+          text-align: right;
+          font: 700 12px/14px Roboto;
+          text-decoration-line: line-through;
+          color: rgba(48, 55, 61, .5);
+        }
+
+        &-total {
+          font: 700 18px/26px Roboto;
+          color: #2C0952;
+        }
+
+        &-sale {
+          padding: 3px 5px 2px;
+          text-align: center;
+          font: 700 10px/12px Roboto;
+          color: #FF548C;
+          background-color: rgba(255, 84, 140, .2);
+          border-radius: 13px;
+        }
+      }
+    }
+
+    .btn {
+      padding: 5px 15px 7px;
+      max-width: 125px;
+      font: 600 14px/16px FuturaPT;
+      background: #27CC00;
+      box-shadow: 0px 3px 10px rgba(39, 204, 0, 0.35);
+    }
+  }
 }
