feature: adds content for product page

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -165,6 +165,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="checkout.html" style="color: #fff;">Корзина</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="product.html" style="color: #fff;">Продукт</a>
+			</li>
 		</ul>
 	</div>
 </div>
