--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,6 +24,7 @@
 @import "components/dotted-list";
 @import "components/feature";
 @import "components/filter";
+@import "components/tooltip";
 
 @import "layout/header";
 @import "layout/main-features";
@@ -42,3 +43,4 @@
 @import "layout/catalog";
 @import "layout/account";
 @import "layout/checkout";
+@import "layout/product";
