--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -109,6 +109,60 @@
         padding-bottom: 20px;
         border-bottom: 1px solid #EAEAEA;
       }
+
+      &-title {
+        display: inline-block;
+        text-transform: uppercase;
+        font: 600 16px/19px FuturaPT;
+
+        span {
+          color: #FF548C;
+        }
+      }
+
+      &-input {
+        width: 100%;
+        padding: 15px;
+        font: normal 15px/18px Roboto;
+        color: #30373D;
+        background: #FFFFFF;
+        border: 1px solid #E9E9E9;
+        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.08);
+        border-radius: 8px;
+
+        @include screen(l) {
+          margin-right: 10px;
+          max-width: 240px;
+        }
+      }
+
+      &-btn {
+        padding: 15px 13px;
+        font: 600 18px/21px FuturaPT;
+        text-transform: uppercase;
+        background: #27CC00;
+        box-shadow: 0px 3px 10px rgba(39, 204, 0, 0.35);
+        border-radius: 8px;
+
+        @include screen(l) {
+          max-width: 120px;
+        }
+      }
+
+      &-btn-checkout {
+        padding: 19px 15px;
+        font: 600 18px/21px FuturaPT;
+        text-transform: uppercase;
+
+        span {
+          position: relative;
+        }
+
+        svg {
+          position: absolute;
+          left: -35px;
+        }
+      }
     }
 
     .checkout__container-title {
@@ -178,5 +232,186 @@
     }
   }
 
+  &__present {
+    li {
+      position: relative;
+      border: 2px solid transparent;
+      border-radius: 50%;
 
+      @include screen(l) {
+        width: 110px;
+        height: 110px;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 10px;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 18px;
+        height: 14px;
+        background: url("../img/pic/ico/product-check.svg") no-repeat;
+        opacity: 0;
+        z-index: 2;
+        transition: opacity .2s;
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 5px;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 26px;
+        height: 26px;
+        background: url("../img/pic/ico/product-plus.svg") no-repeat;
+        z-index: 2;
+        opacity: 0;
+        transition: opacity .2s;
+      }
+
+      &:hover {
+        border-color: rgba(255, 84, 140, 0.2);
+        box-shadow: 0px 5px 15px rgba(255, 84, 140, 0.3);
+
+        div {
+          border-color: rgba(255, 84, 140, 0.2);
+        }
+
+        &:before {
+          opacity: 1;
+        }
+      }
+
+      &.checked {
+        border-color: #FF548C;
+
+        div {
+          border-color: #FF548C;
+        }
+
+        &::after {
+          opacity: 1;
+        }
+
+        &::before {
+          display: none;
+        }
+
+      }
+    }
+
+    div {
+      position: relative;
+      border: 1px solid #EAEAEA;
+      border-radius: 50%;
+      background: #FFFFFF;
+      overflow: hidden;
+      cursor: pointer;
+      width: 100%;
+      height: 100%;
+
+      span {
+        position: relative;
+        z-index: 1;
+        display: inline-block;
+        font: 600 14px/16px FuturaPT;
+        text-transform: uppercase;
+      }
+
+      img {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        height: auto;
+        mix-blend-mode: darken;
+      }
+    }
+  }
+
+  /* swiper-gallery */
+
+  &__gallery {
+    @include screen(xl) {
+      margin-bottom: 20px;
+    }
+
+    @include screen(l) {
+      margin-top: 40px;
+    }
+
+    .swiper-container {
+      width: 100%;
+      height: 300px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .swiper-slide {
+      background-size: cover;
+      background-position: center;
+    }
+
+    .gallery-top {
+      background: red;
+      @include screen(l) {
+        /* height: 80%; */
+        /* width: 100%; */
+      }
+
+      .swiper-slide {
+        background-size: contain !important;
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+      }
+    }
+
+    .gallery-thumbs {
+      /* margin-top: 20px; */
+      /* height: 83px; */
+      width: 150px;
+      background: blue;
+      box-sizing: border-box;
+      /* padding: 10px 25px; */
+     /*  background: #F7F7F7; */
+     /*  border-radius: 8px; */
+    }
+
+    .gallery-thumbs .swiper-slide {
+      padding: 10px 5px !important;
+      background-color: #ffffff !important;
+      background-size: contain !important;
+      background-position: center !important;
+      background-repeat: no-repeat !important;
+      /* border-radius: 6px; */
+      width: 70px;
+      height: 70px;
+      /* opacity: 0.4; */
+    }
+
+    .gallery-thumbs .swiper-slide-thumb-active {
+      opacity: 1;
+    }
+
+    .swiper-button-next {
+      right: 0;
+      transform: rotate(-90deg);
+      background-image: url(../img/pic/ico/arrow.svg);
+      background-size: 10px;
+    }
+
+    .swiper-button-prev {
+      left: 0;
+      transform: rotate(90deg);
+      background-image: url(../img/pic/ico/arrow.svg);
+      background-size: 10px;
+    }
+  }
+
+  /* ---------------------------------------------- */
 }
