feature: adds page refferal

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -168,6 +168,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="product.html" style="color: #fff;">Продукт</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="refferal.html" style="color: #fff;">Рефералка</a>
+			</li>
 		</ul>
 	</div>
 </div>
