fix: changes images

--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -269,6 +269,7 @@
       label {
         display: block;
         padding: 9px;
+        white-space: nowrap;
         font: 500 12px/16px Roboto;
       }
     }
