--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -36,17 +36,16 @@
   }
 
   &--pink {
-    padding: 40px 50px;
+   
+    background: linear-gradient(250.77deg, #ED656C 0%, #DF5C91 99.52%);
 
     @include screen(x) {
       margin-bottom: 20px;
     }
 
     @include screen(xl) {
+      padding: 40px 35px;
       height: 390px;
-      background: #ED646E;
-      background-size: contain;
-      background-position: center bottom;
     }
 
     @include screen(sm) {
@@ -54,13 +53,11 @@
     }
 
     @include screen(l) {
+      padding: 40px 50px;
       margin-right: 20px;
-      background: url("../img/pic/bg/banner-pink.jpg") no-repeat;
-      background-size: cover;
-      background-position: right;
     }
 
-    &:after {
+    /*  &:after {
       position: absolute;
       content: "";
       top: 0;
@@ -68,7 +65,7 @@
       width: 100%;
       height: 40px;
       background: linear-gradient(0deg, rgba(237, 100, 110, 0.0001) 0%, #ED646E 100%);
-    }
+    } */
 
     img {
       &:first-of-type {
@@ -79,7 +76,11 @@
 
       &:last-of-type {
         @include screen(l) {
-          display: none;
+          position: absolute;
+          bottom: 0;
+          right: 10px;
+          width: 311px;
+          height: 171px;
         }
 
         @include screen(xl) {
@@ -88,10 +89,8 @@
           right: 0;
           left: 0;
           margin: auto;
-          width: 100%;
         }
       }
-
     }
 
     p {
